# rusty_audio

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  demo_audio_buffer.cpp  demo_buffer.cpp  demo_builder.cpp  demo_builder2.cpp  demo_miniaudio.cpp  demo_sound_buffer.cpp  demo_sound_builder.cpp  hello_rusty_audio.cpp
include/: audio_buffer.h  buffer.h  buffer_iterator.h  builder.h  frame.h  note.h  player.h  rusty_audio.h  sound_buffer.h  sound_buffer_iterator.h  sound_builder.h  sound_descriptor.h  sound_descriptor_sinusoid.h  sound_descriptor_squared.h  sound_frame.h  sound_manager.h  sound_player.h  waveform.h  waveform_sinusoid.h  waveform_squared.h
source/: audio_buffer.cpp  audio_buffer_impl.cpp  audio_buffer_impl.h  buffer.cpp  buffer_iterator.cpp  builder.cpp  frame.cpp  player.cpp  player_impl.cpp  player_impl.h  rusty_audio.cpp  sound_buffer.cpp  sound_buffer_iterator.cpp  sound_builder.cpp  sound_frame.cpp  sound_manager_impl.cpp  sound_manager_impl.h  sound_player.cpp  sound_player_impl.cpp  sound_player_impl.h
tests/: CMakeLists.txt  sound_buffer_tests.cpp
